--- a/MsgApp/MainPage.xaml
+++ b/MsgApp/MainPage.xaml
@@ -5,7 +5,7 @@
 
     <ScrollView>
         <Grid RowSpacing="0" RowDefinitions="Auto,Auto,Auto,Auto,*"
-              Padding="{OnPlatform iOS='30,60,30,30', Default='30'}">
+              Padding="{OnPlatform iOS='30,60,30,30', Default='30'}" x:Name="grid">
 
             <Label 
                 Text="Select a friend to chat with:"
@@ -18,6 +18,7 @@
                 Grid.Row="0"
                 HorizontalOptions="Start"
                 Clicked="OnAddContact"/>
+
 
         </Grid>
     </ScrollView>
