--- a/MsgApp/Pages/AddContact.xaml
+++ b/MsgApp/Pages/AddContact.xaml
@@ -1,6 +1,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MsgApp.Pages.SetupPage"
+             x:Class="MsgApp.Pages.AddContact"
              BackgroundColor="{DynamicResource PrimaryColor}">
 
     <ScrollView>
@@ -8,28 +8,35 @@
               Padding="{OnPlatform iOS='30,60,30,30', Default='30'}">
 
             <Label 
-                Text="Welcome to App Name, Here we will help you get your account setup!"
+                Text="Add a New Contact:"
                 Grid.Row="0"
                 SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
+                FontSize="21"
                 HorizontalOptions="Center" />
 
             <Label
-                Text="Enter a UserName"
+                Text="Enter the name that you would like this contact to be stored under:"
                 Grid.Row="1"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="18"
                 HorizontalOptions="Center" />
 
             <Entry
-                x:Name="userName"
+                x:Name="ContactName"
                 Grid.Row="2"
-                TextColor="WhiteSmoke"/>
+                TextColor="WhiteSmoke"
+                HorizontalOptions="Center"/>
+            <Entry
+                x:Name="ContactID"
+                Grid.Row="3"
+                TextColor="WhiteSmoke"
+                HorizontalOptions="Center"/>
 
             <Button
                 Text="Go!"
-                Grid.Row="3"
-                Clicked="OnGoClicked"/>
+                Grid.Row="4"
+                Clicked="OnAddContact"
+                HorizontalOptions="Center"/>
 
         </Grid>
     </ScrollView>
